# RayTracer

./: CMakeLists.txt  README.md  RayTracer.cpp
include/: HitList.h  Ray.h
src/: HitList.cpp.backup  Ray.cpp
test/: RayTracingWithPointsFromWorld.cpp  ShapeRayTracingIncludingNormal.cpp  ShapeRayTracingMultipleObjectIncludingNormal.cpp  ShapeWithRayTracer.cpp  UsingRay.cpp
